# wa

./: .gitignore  CMakeLists.txt  README.md  generate-wayland-protocols.sh  meson.build
include/: wa.h  wa_event.h
sandbox/: frag.glsl  main.c  meson.build  opengl.c  vert.glsl
tests/: simple.c
wa/: meson.build
wa/include/: wa.h  wa_event.h  wa_keys.h  wa_log.h  wa_wayland.h  wa_wayland_xkbcommon.h  wa_win32.h  wa_xkbcommon.h
wa/src/: wa.c  wa_log.c  wa_wayland.c  wa_wayland_egl.c  wa_wayland_input.c  wa_wayland_xkbcommon.c  wa_win32.c  wa_win32_keymap.c  wa_xkbcommon.c
wa/wayland-protocols/: meson.build
